--- a/website/static/style.css
+++ b/website/static/style.css
@@ -1,6 +1,46 @@
-nav a {
-    color: #276d16;
-    font-size: 3em;
-    margin-left: 50px;
-    text-decoration: none;
+.grid-container {
+    display: grid;
+    padding: 30px;
+    grid-template-columns: 200px 200px 200px;
+    grid-template-rows: auto auto auto auto;
+    justify-content: space-around;
+}
+
+.box {
+    min-height: 200px;
+    background-color: aqua;
+}
+
+.item1 {
+    grid-column: 1;
+    grid-row: 1;
+}
+
+.item2 {
+    grid-column: 2;
+    grid-row: 1 / 3;
+}
+
+.item3 {
+    grid-column: 3;
+    grid-row: 1 / 3;
+}
+
+.item4 {
+    grid-column: 1;
+    grid-row: 2 / 5;
+}
+
+.item5 {
+    grid-column: 2;
+    grid-row: 3 / 5;
+}
+
+.item6 {
+    grid-column: 3;
+    grid-row: 3 / 5;
+}
+
+h1 {
+
 }
