--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -6,16 +6,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">    
 </head>
 <body>
-    <nav>
-        <a href="#">Upload</a>
-        <a href="#">New</a>
-        <a href="#">About</a>
-    </nav>
-    <hr>
-    <div class="content">
+    <div class="head">
         <header>
             {% block content %} {% endblock %}
         </header>
+    </div>
+    <div class="grid-container">
+        {% block grid %} {% endblock %}
     </div>
 </body>
 </html>
