--- a/website/static/style.css
+++ b/website/static/style.css
@@ -1,3 +1,15 @@
+@font-face {
+    font-family: SuperMagic;
+    src: url(fonts/Super\ Magic.ttf);
+  }
+
+h1 {
+    font-family: SuperMagic;
+    font-size: 40px;
+    letter-spacing: 2px;
+    font-weight: 200;
+}
+
 .grid-container {
     display: grid;
     padding: 30px;
@@ -41,6 +53,3 @@
     grid-row: 3 / 5;
 }
 
-h1 {
-
-}
