--- a/website/static/style.css
+++ b/website/static/style.css
@@ -1,55 +1,76 @@
 @font-face {
     font-family: SuperMagic;
     src: url(fonts/Super\ Magic.ttf);
-  }
+}
+
 
 h1 {
     font-family: SuperMagic;
-    font-size: 40px;
+    font-size: 60px;
     letter-spacing: 2px;
     font-weight: 200;
+    margin: 0;
+    padding: 0;
 }
 
-.grid-container {
-    display: grid;
-    padding: 30px;
-    grid-template-columns: 200px 200px 200px;
-    grid-template-rows: auto auto auto auto;
-    justify-content: space-around;
+
+.aboutBox {
+    grid-area: aboutBox;
+    background-color: aqua;
+    border-radius: 25px;
 }
 
 .box {
-    min-height: 200px;
+    border-radius: 25px;
     background-color: aqua;
+    
 }
 
 .item1 {
-    grid-column: 1;
-    grid-row: 1;
+    grid-area: item1;
 }
 
 .item2 {
-    grid-column: 2;
-    grid-row: 1 / 3;
+    grid-area: item2;
 }
 
 .item3 {
-    grid-column: 3;
-    grid-row: 1 / 3;
+    grid-area: item3;
 }
 
 .item4 {
-    grid-column: 1;
-    grid-row: 2 / 5;
+    grid-area: item4;
 }
 
 .item5 {
-    grid-column: 2;
-    grid-row: 3 / 5;
+    grid-area: item5;
 }
 
 .item6 {
-    grid-column: 3;
-    grid-row: 3 / 5;
+    grid-area: item6;
 }
 
+.item7 {
+    grid-area: item7;
+}
+
+.info {
+    grid-area: info;
+    display: grid;
+    grid:
+    [row1-start] "item1" 150px [row1-end]
+    [row2-start] "aboutBox" 480px [row2-end]
+    / 300px;
+}
+
+.container {
+    margin-top: 40px;
+    margin-left: 40px;
+    display: grid;
+    gap: 30px;
+    grid:
+    [row1-start] "info item2 item3 item4" 300px [row1-end]
+    [row2-start] "info item2 item3 item4" 300px [row2-end]
+    / 300px 300px 300px 300px;
+    justify-content: center;
+}
