--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -11,7 +11,7 @@
             {% block content %} {% endblock %}
         </header>
     </div>
-    <div class="grid-container">
+    <div class="container">
         {% block grid %} {% endblock %}
     </div>
 </body>
