--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,22 +1,30 @@
 {% extends 'base.html' %}
 
 {% block grid %}
-    <div class="item1">
-        <h1>Easy Reader</h1>
+    <div class="info">
+        <div class="item1">
+            <h1>Easy Reader</h1>
+        </div>
+        <div class="aboutBox">
+            <p class="aboutP">crochet and knitting patterns don't have to be a pain to read or write!</p>
+        </div>
     </div>
     <div class="item2, box">
         <h1>Upload Pattern</h1>
     </div>
     <div class="item3, box">
-        <h1>Create New Pattern</h1>
+        <h1>New Pattern</h1>
     </div>
-    <div class="item4">
-        <p class="about">crochet and knitting patterns don't have to be a pain to read or write!</p>
+    <div class="item4, box">
+        <h1>:)</h1>
     </div>
     <div class="item5, box">
         <h1>My Library</h1>
     </div>
     <div class="item6, box">
-        <h1>Account & Settings</h1>
+        <h1>Settings</h1>
+    </div>
+    <div class="item7, box">
+        <h1>Account</h1>
     </div>
 {% endblock %}
