--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,7 +6,7 @@
             <h1>Easy Reader</h1>
         </div>
         <div class="aboutBox">
-            <p class="aboutP">crochet and knitting patterns don't have to be a pain to read or write!</p>
+            <p class="aboutP"><i>Crochet & knitting patterns don't have to be a pain to read or write.</i></p>
         </div>
     </div>
     <div class="item2, box">
