--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,29 +2,29 @@
 
 {% block grid %}
     <div class="info">
-        <div class="item1">
-            <h1>Easy Reader</h1>
+        <div class="titleBox">
+            <h1 class="title">Easy Reader</h1>
         </div>
         <div class="aboutBox">
             <p class="aboutP"><i>Crochet & knitting patterns don't have to be a pain to read or write.</i></p>
         </div>
     </div>
-    <div class="item2, box">
+    <div class="gridBox1, box">
         <h1>Upload Pattern</h1>
     </div>
-    <div class="item3, box">
+    <div class="gridBox2, box">
         <h1>New Pattern</h1>
     </div>
-    <div class="item4, box">
+    <div class="gridBox3, box">
         <h1>:)</h1>
     </div>
-    <div class="item5, box">
+    <div class="gridBox4, box">
         <h1>My Library</h1>
     </div>
-    <div class="item6, box">
+    <div class="gridBox5, box">
         <h1>Settings</h1>
     </div>
-    <div class="item7, box">
+    <div class="gridBox6, box">
         <h1>Account</h1>
     </div>
 {% endblock %}
