--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -6,25 +6,25 @@
             <h1 class="title">Easy Reader</h1>
         </div>
         <div class="aboutBox">
-            <p class="aboutP"><i>Crochet & knitting patterns don't have to be a pain to read or write.</i></p>
+            <p class="aboutP">Crochet & knitting patterns don't have to be a pain to read or write.</p>
         </div>
     </div>
-    <div class="gridBox1, box">
+    <div class="gridBox1 box">
         <h1>Upload Pattern</h1>
     </div>
-    <div class="gridBox2, box">
+    <div class="gridBox2 box">
         <h1>New Pattern</h1>
     </div>
-    <div class="gridBox3, box">
-        <h1>:)</h1>
+    <div class="gridBox3 box">
+        <h1>Account</h1>
     </div>
-    <div class="gridBox4, box">
+    <div class="gridBox4 box">
         <h1>My Library</h1>
     </div>
-    <div class="gridBox5, box">
-        <h1>Settings</h1>
+    <div class="gridBox5 box">
+        <h1>Browse</h1>
     </div>
-    <div class="gridBox6, box">
-        <h1>Account</h1>
+    <div class="gridBox6 box">
+        <h1>Settings</h1>
     </div>
 {% endblock %}
